--- a/package.json
+++ b/package.json
@@ -1,46 +1,40 @@
 {
-	"name": "lsp-sample",
-	"description": "A language server example",
-	"author": "Microsoft Corporation",
+	"name": "ngx-markuplint-vscode",
+	"description": "Angular integration for Markuplint",
+	"author": "Masato Nagashima",
 	"license": "MIT",
-	"version": "1.0.0",
+	"version": "0.0.1",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/nagashimam/ngx-markuplint-vscode.git"
 	},
-	"publisher": "vscode-samples",
-	"categories": [],
+	"publisher": "nagashimam",
+	"categories": [
+		"Linters"
+	],
 	"keywords": [
-		"multi-root ready"
+		"Angular",
+		"linter",
+		"Markuplint"
 	],
 	"engines": {
 		"vscode": "^1.75.0"
 	},
 	"activationEvents": [
-		"onLanguage:plaintext"
+		"onLanguage:html",
+		"onLanguage:typescript"
 	],
 	"main": "./client/out/extension",
 	"contributes": {
 		"configuration": {
 			"type": "object",
-			"title": "Example configuration",
+			"title": "ngx-markuplint-vscode's config",
 			"properties": {
-				"languageServerExample.maxNumberOfProblems": {
+				"ngxMarkuplint.markuplintConfig": {
 					"scope": "resource",
-					"type": "number",
-					"default": 100,
-					"description": "Controls the maximum number of problems produced by the server."
-				},
-				"languageServerExample.trace.server": {
-					"scope": "window",
-					"type": "string",
-					"enum": [
-						"off",
-						"messages",
-						"verbose"
-					],
-					"default": "off",
-					"description": "Traces the communication between VS Code and the language server."
+					"type": "object",
+					"default": {},
+					"description": "Conifg of Markuplint. Something you'd write in .markuplintrc.json for plain HTML"
 				}
 			}
 		}
@@ -62,5 +56,11 @@
 		"mocha": "^10.3.0",
 		"typescript": "^5.8.2",
 		"typescript-eslint": "^8.26.0"
+	},
+	"dependencies": {
+		"@markuplint/ml-config": "^4.8.11",
+		"markuplint": "^4.12.0",
+		"ngx-html-bridge": "^1.0.5",
+		"prettier": "^3.5.3"
 	}
 }
