--- a/client/package.json
+++ b/client/package.json
@@ -19,5 +19,17 @@
 	"devDependencies": {
 		"@types/vscode": "^1.75.1",
 		"@vscode/test-electron": "^2.3.9"
+	},
+	"contributes": {
+		"configuration": {
+			"title": "ngx-markuplint",
+			"properties": {
+				"ngx-markuplint.includedAttributes": {
+					"type": "array",
+					"default": [],
+					"description": "List of attributes to include when linting Angular templates."
+				}
+			}
+		}
 	}
 }
